feat: improve card trading, auto select card after 10 seconds
